# compro1-2

./: 1.01banknotes.rap  1.01banknotes.rap.backup2  1.02isthiscalculus.rap  1.02isthiscalculus.rap.backup2  1.03neverdoneit.rap  1.2grading.rap.backup0  1.3commission.rap.backup1  1.3commission.rap.backup2  1.4halftriangle.rap.backup0  1.4halftriangle.rap.backup1  CMakeLists.txt  README.md  donut.rap.backup0  donut.rap.backup2  donut.rap.backup3  scan.py  test  test.c
week1/: 1.01banknotes.rap.backup0  1.01banknotes.rap.backup1  1.01banknotes.rap.backup3  1.02isthiscalculus.rap.backup0  1.02isthiscalculus.rap.backup1  1.02isthiscalculus.rap.backup3  1.03neverdoneit.rap.backup0  1.03neverdoneit.rap.backup1  1.03neverdoneit.rap.backup2  1.03neverdoneit.rap.backup3  1.1donut.rap  1.2grading.rap  1.2grading.rap.backup1  1.2grading.rap.backup2  1.2grading.rap.backup3  1.3commission.rap  1.3commission.rap.backup0  1.3commission.rap.backup3  1.4halftriangle.rap  1.4halftriangle.rap.backup2  Lab-01-05-Arrow-UP.rap  donut.rap.backup1
week10/: Lab_10-01_infobook  Lab_10-01_infobook.c  Lab_10-04_distance  Lab_10-04_distance.c  Lab_10-05_Weather  Lab_10-05_Weather.c  Lab_10_02_fineoption.c  Lab_10_03_summary.c
week10/lab/: Lab_09-01.pointer1  Lab_09-01.pointer1.c  Lab_09_02_pointer2  Lab_09_02_pointer2.c  Lab_09_03_pinter3  Lab_09_03_pinter3.c  Lab_09_04_pointer4  Lab_09_04_pointer4.c  Lab_09_05_Swap  Lab_09_05_Swap.c  test.c
week10/quiz/: 01.c
week2/: 02_04_StringFormat.c  02_05_String_format2.c  02_06_multiinput.c  02_08_3Person  02_08_3Person.c  hw02_01_ASCii
week2/lab+hw/: 02_01_printF  02_01_printF.c  02_02_Complete_the_code  02_02_Complete_the_code.c  02_03_GreetingAlien  02_03_GreetingAlien.c  02_04_StringFormat  02_05_String_format2  02_06_multiinput  02_07_itregis  02_07_itregis.c  02_08_3Person  02_08_3Person.c  02_09_Character_Shift  02_09_Character_Shift.c  hw02_01_ASCii.c  hw02_02_Number  hw02_02_Number.c  hw02_03_Numberii  hw02_03_Numberii.c  notepad
week2/quiz/: q_01-01_modulo  q_01-01_modulo.c  q_01-02_fizz.c  q_01_03_Whatoutput.c  q_01_05_Simple_Calculator  q_01_05_Simple_Calculator.c
week3/lab+hw/: 03_01_Stringformatiii  03_01_Stringformatiii.c  03_02_sum_and_average  03_02_sum_and_average.c  03_03_pythagoras  03_03_pythagoras.c  03_04_Arithmetic  03_04_Arithmetic.c  03_05_Perimeter  03_05_Perimeter.c  03_06_Canpricerate  03_06_Canpricerate.c  03_07_Sales_t-shrit  03_07_Sales_t-shrit.c  03_08_Datetime  03_08_Datetime.c  hw_03_01.cell  hw_03_01.cell.c  hw_03_02_bmi  hw_03_02_bmi.c
week3/quiz/: 02-02_timeformat.c  02_01.Table-of  02_01.Table-of.c
week4/hw-lab/: 04_01_comditionprocess  04_01_comditionprocess.c  04_02_Find_Number  04_02_Find_Number.c  04_03_Yourgrade  04_03_Yourgrade.c  04_04_yourscore  04_04_yourscore.c  04_05_CaseConvert  04_05_CaseConvert.c  04_06_what_type  04_06_what_type.c  hw_04_01_SalesT-shirt  hw_04_01_SalesT-shirt.c  hw_04_02_Valid_Triangle  hw_04_02_Valid_Triangle.c  test  test.c
week4/quiz/: 03-01_A+B  03-01_A+B.c  03-02_Check_sort  03-02_Check_sort.c  test  test.c
week5/hw-lab/: 05_01_1ton  05_01_1ton.c  05_01_sum9  05_02_nto1  05_02_nto1.c  05_03_the_decision  05_03_the_decision.c  05_04_While  05_04_While.c  05_05_EasyLoop  05_05_EasyLoop.c  05_06_Easy_Pyramid  05_06_Easy_Pyramid.c  Hw_05_01_sum9  Hw_05_01_sum9.c  Hw_05_03_Regsystem  Hw_05_03_Regsystem.c  (+2 more)
week7/: test1  test1.c
week9/: Lab_08_02_Clearspace.c  Lab_08_03_Counter  Lab_08_03_Counter.c  Lab_08_04_Word separation.c  Lab_08_05_Lengthofname  Lab_08_05_Lengthofname.c
(+44 files in other folders)
