cmake_minimum_required(VERSION 3.21)
project(compro1_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(compro1_2
#        week7/hw+lab/Lab_07_01
#        week7/hw+lab/Lab_07_01.c
#        week7/hw+lab/Lab_07_02
#        week7/hw+lab/Lab_07_02.c
        week7/hw+lab/Lab_07_03.c
#        week7/hw+lab/tempCodeRunnerFile.c
#        week7/quiz/Quiz_06_01
#        week7/quiz/Quiz_06_01.c
#        week7/quiz/Quiz_06_02.c
#        week7/test1
#        week7/test1.c
#        week7/hw+lab/test.c
        )
