cmake_minimum_required(VERSION 3.21)
project(compro1_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(
#        compro1_2
#        week2/lab+hw/02_01_printF.c
#        week2/lab+hw/02_02_Complete_the_code.c
#        week2/lab+hw/02_03_GreetingAlien.c
#        week2/lab+hw/02_04_StringFormat.c
#        week2/lab+hw/02_05_String_format2.c
#        week2/lab+hw/02_06_multiinput.c
#        week2/lab+hw/02_07_itregis.c
#        week2/lab+hw/02_08_3Person.c
#        week2/lab+hw/02_09_Character_Shift.c
#        week2/lab+hw/hw02_01_ASCii.c
#        week2/lab+hw/hw02_02_Number.c
#        week2/lab+hw/hw02_03_Numberii.c
#        week2/quiz/q_01-01_modulo.c
#        week2/quiz/q_01-02_fizz.c
#        week2/quiz/q_01_03_Whatoutput.c
#        week2/quiz/q_01_05_Simple_Calculator.c
#        week3/lab+hw/03_01_Stringformatiii.c
#        week3/lab+hw/03_02_sum_and_average.c
#        week3/lab+hw/03_03_pythagoras.c
#        week3/lab+hw/03_04_Arithmetic.c
#        week3/lab+hw/03_05_Perimeter.c
#        week3/lab+hw/03_06_Canpricerate.c
#        week3/lab+hw/03_07_Sales_t-shrit.c
#        week3/lab+hw/03_08_Datetime.c
#        week3/lab+hw/hw_03_01.cell.c
#        week3/lab+hw/hw_03_02_bmi.c
#        week3/quiz/02-02_timeformat.c
#        week3/quiz/02_01.Table-of.c
#        week4/hw-lab/04_01_comditionprocess.c
#        week4/hw-lab/04_02_Find_Number.c
#        week4/hw-lab/04_03_Yourgrade.c
#        week4/hw-lab/04_04_yourscore.c
#        week4/hw-lab/04_05_CaseConvert.c
#        week4/hw-lab/04_06_what_type.c
#        week4/hw-lab/hw_04_01_SalesT-shirt.c
#        week4/hw-lab/hw_04_02_Valid_Triangle.c
#        week4/hw-lab/test.c
#        week4/quiz/03-01_A+B.c
#        week4/quiz/03-02_Check_sort.c
#        week4/quiz/test.c
#        week5/hw-lab/05_01_1ton.c
#        week5/hw-lab/05_02_nto1.c
#        week5/hw-lab/05_03_the_decision.c
#        week5/hw-lab/05_04_While.c
#        week5/hw-lab/05_05_EasyLoop.c
#        week5/hw-lab/05_06_Easy_Pyramid.c
#        week5/hw-lab/Hw_05_01_sum9.c
#        week5/hw-lab/Hw_05_03_Regsystem.c
#        week5/hw-lab/้Hw_05_02_DrawX.c
#        week5/quiz/04_01_Dayofweek.c
#        week5/quiz/04_02_Pao-ying-shub.c
#        week5/quiz/tempCodeRunnerFile.c
#        week6/hw-lab/quiz/05-01.c
#        "week6/hw-lab/Hw 06_01.c"
#        week6/hw-lab/Hw_06_02.c
#        week6/hw-lab/Hw_06_03.c
#        "week6/hw-lab/Lab 06_06.c"
#        week6/hw-lab/Lab_06_01.c
#        week6/hw-lab/Lab_06_02.c
#        week6/hw-lab/Lab_06_03.c
#        week6/hw-lab/Lab_06_04.c
#        week6/hw-lab/Lab_06_05.c
#        week6/hw-lab/Lab_06_07.c
#        week6/hw-lab/tempCodeRunnerFile.c
#        week6/hw-lab/test.c
#        week6/quiz/quiz05-01.c
#        week6/quiz/quiz05-02.c
#        week7/hw+lab/Lab_07_01.c
#        week7/quiz/Quiz_06_01.c
#        week7/quiz/Quiz_06_02.c
        test.c week7/test1.c week7/hw+lab/Lab_07_02.c week7/hw+lab/Lab_07_01.c)
